chore: moved to zod openapi generation
